--- a/index.html
+++ b/index.html
@@ -11,13 +11,30 @@
   <meta name="author" content="Cristian Camilo Rodriguez">
 </head>
 <body>
-<!-- 
-  Preview
-  Gabrielle Essence Eau De Parfum
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-  $149.99
-  $169.99
-  Add to Cart -->
+  <main class="content">
+    <section class="card">
+      <div class="card__figure">
+        <img src="images/image-product-mobile.jpg" alt="Chenel Permufe" class="product">
+      </div>
+      <div class="card__info">
+        <div class="card__info-subtitle">
+          <p>PERFUME</p>
+        </div>
+        <div class="card__info-title">
+          <h2>Gabrielle Essence Eau De Parfum</h2>
+        </div>
+        <div class="card__info-description">
+          <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+        </div>
+        <div class="card__info-prices">
+          <p class="price">$149.99</p>
+          <p class="previous-price">$169.99</p>
+        </div>
+        <div class="card__info-cta">
+          <button class="cta"> <img src="images/icon-cart.svg" alt="add to car"> Add to Cart</button>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
